--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sentry/nextjs": "^8",
     "@tabler/icons-react": "^3.24.0",
     "@xyflow/react": "^12.3.6",
+    "asana": "^3.0.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -33,6 +34,7 @@
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
+    "octokit": "^4.0.2",
     "random-words": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
