--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.469.0",
     "next": "15.0.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "octokit": "^4.0.2",
     "random-words": "^2.0.1",
