--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tabler/icons-react": "^3.24.0",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "@xyflow/react": "^12.3.6",
     "asana": "^3.0.12",
     "class-variance-authority": "^0.7.1",
